<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_height="20dp" android:layout_width="20dp">
    <item
        android:id="@+id/language"
        android:icon="@drawable/baseline_language_24"
        android:orderInCategory="100"
        android:title="@string/STRING_LANGUAGEBUTTON"
        app:showAsAction="always"
        android:onClick="changeLanguageActivity"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/baseline_info_24"
        android:orderInCategory="100"
        android:title="@string/STRING_ABOUT"
        app:showAsAction="ifRoom"
        android:onClick="displayAboutActivity"/>
</menu>
