<resources>
    <string name="STRING_APP_NAME">Todo-Tasker</string>
    <string name="STRING_CREATETASK">Create Task</string>
    <string name="STRING_ADDTASK">Add Task</string>
    <string name="STRING_MODIFYTASK">Modify Task</string>
    <string name="STRING_SAVE">Save</string>
    <string name="STRING_NAME">Name</string>
    <string name="STRING_ENTER_DATE">Due Date</string>
    <string name="STRING_SHOWTASKLIST">Show Task List</string>
    <string name="STRING_PLACEHOLDER">Placeholder</string>
    <string name="STRING_LANGUAGEBUTTON">Change Language</string>
    <string name="NOTIFICATION_TITLE">TodoTasker Reminder</string>
    <string name="NOTIFICATION_TEXT">Finish your Task</string>
    <string name="STRING_CANCEL">Cancel</string>
    <string name="STRING_COMPLETE_TASK">Complete Task</string>
    <string name="STRING_DUPLICATETASK">Duplicate Task</string>
    <string name="STRING_DELETETASK">Delete Task</string>
    <string name="STRING_DATETIMEFORMAT">dd.MM.yyyy HH:mm</string>
    <string name="STRING_YOUR_PROJECT">Your Projects</string>
    <string name="STRING_PROJECT_SETTINGS">Project Settings</string>
    <string name="STRING_BACK">Back Arrow</string>
    <string name="STRING_MODIFY_PROJECTS">Modify Projects</string>
    <string name="STRING_MODIFY_PROJECT">Modify Project</string>
    <string name="STRING_ADD_PROJECT">Add Project</string>
    <string name="STRING_ENTER_COLOR">Color</string>
    <string name="STRING_BACKUP_AND_RESTORE_BUTTON">Backup and Restore</string>
    <string name="STRING_EXPORT_TO_FILE">Export to file\n</string>
...
