...
    <!--        Naming Convention: TYPE_USAGESHORTDESC-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_add_to_db"
...
